deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        # image: hoooo/frontend_0131
        image: ghcr.io/shclub/vue3
        imagePullPolicy: Always
        ports:
        - containerPort: 80
